Fixed some design issues and improved page export styling
Fixed alignment on export options dropdown.
Fixed bullet list items sitting too close next to floated content. Fixes #34.
Fixed text overlaying images in PDF exports (Floats removed for now). Fixes #53.
Fixed spaced table cells on html & PDF exports.

--- a/resources/assets/sass/_lists.scss
+++ b/resources/assets/sass/_lists.scss
@@ -105,8 +105,8 @@
 }
 .book-tree .sidebar-page-list {
   list-style: none;
-  margin: 0;
-  margin-top: $-xs;
+  margin: $-xs 0 0;
+  padding-left: 0;
   border-left: 5px solid $color-book;
   li a {
     display: block;
